package net.thesphynx.espritmarket.Marketplace.Entity;

public enum RequestStatus {
    EN_ATTENTE,
    APPROUVE,
    REFUSE
}
